--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".PerfilActivity" />
-        <activity android:name=".SplashActivity">
+        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".login.InicioActivity" />
+        <activity android:name=".login.Pantalla_Carga_Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegistroActivity" />
+        <activity android:name=".login.RegistroActivity" />
         <activity android:name=".MainActivity" />
     </application>
 
