--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".menu.Chat.ChatActivity"></activity>
+        <activity android:name=".menu.Chat.ChatActivity"
+            android:theme="@style/AppThemeNo"/>
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".login.InicioActivity" />
         <activity android:name=".login.Pantalla_CargaActivity">
