--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ThereProfileActivity"></activity>
+        <activity android:name=".menu.Chat.ChatActivity"
+            android:theme="@style/AppThemeNo"/>
         <activity android:name=".login.LoginActivity" />
+        <activity android:name=".ThereProfileActivity"/>
         <activity android:name=".login.InicioActivity" />
         <activity android:name=".login.Pantalla_CargaActivity">
             <intent-filter>
