--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,22 @@
         </activity>
         <activity android:name=".login.RegistroActivity" />
         <activity android:name=".MainActivity" />
+
+        <service android:name=".notificaciones.ServicioFirebase"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_SERVICE"/>
+
+            </intent-filter>
+        </service>
+        <service android:name=".notificaciones.MensajesFireBase"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
