--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation 'com.google.firebase:firebase-analytics'
-    //Notificaciones de chat
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+
+    //Notificaciones
+   implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.github.mohammadatif:CircularImageView:1.0.1'
