--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
 
     //Notificaciones
-   implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.android.volley:volley:1.2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.github.mohammadatif:CircularImageView:1.0.1'
 
+    implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
 }
