--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,12 @@ dependencies {
     //Notificaciones
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-
+    //Para las imagenes
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    //La imagen circular del perfil
     implementation 'com.github.mohammadatif:CircularImageView:1.0.1'
-
+    //intento de menu bar
     implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
+    //slide
+    implementation 'com.google.android.material:material:1.3.0'
 }
