--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,25 +13,29 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".menu.Chat.ChatActivity"
-            android:theme="@style/AppThemeNo"/>
+        <activity android:name=".menu.Chat.Chat_List_Activity"></activity>
+        <activity
+            android:name=".menu.Chat.ChatActivity"
+            android:theme="@style/AppThemeNo" />
         <activity android:name=".login.LoginActivity" />
-        <activity android:name=".menu.perfil.PerfilListaPublicacionActivity"/>
+        <activity android:name=".menu.perfil.PerfilListaPublicacionActivity" />
         <activity android:name=".login.InicioActivity" />
         <activity android:name=".login.Pantalla_CargaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".login.RegistroActivity" />
         <activity android:name=".MainActivity" />
 
-        <service android:name=".notificaciones.MensajesFireBase"
+        <service
+            android:name=".notificaciones.MensajesFireBase"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
