--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".publicacion.DetallePostActivity"></activity>
+        <activity android:name=".publicacion.ComentariosActivity"></activity>
         <activity
             android:name=".menu.Chat.ChatActivity"
             android:theme="@style/AppThemeNo" />
